--- a/notes/hfppl.ipynb
+++ b/notes/hfppl.ipynb
@@ -177,9 +177,7 @@
    "id": "c2b78db3",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from genparse import Float"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -188,6 +186,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from genparse.experimental.earley import Earley\n",
+    "from genparse.lm import LM\n",
+    "from genparse import Boolean, EOS, add_EOS\n",
+    "from genparse import Float\n",
+    "\n",
     "class GreedilyTokenizedLLM:\n",
     "\n",
     "    def __init__(self, llm, tokenizer):\n",
@@ -230,11 +233,7 @@
    "id": "0afa825c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from genparse.experimental.earley import Earley\n",
-    "from genparse.lm import LM\n",
-    "from genparse import Boolean, EOS, add_EOS"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -242,23 +241,7 @@
    "id": "eec6d61b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "class EarleyBoolMaskCFGLM(LM):\n",
-    "    \"LM-like interface for Boolean-masking CFG models.\"\n",
-    "\n",
-    "    def __init__(self, cfg):\n",
-    "        if EOS not in cfg.V: cfg = add_EOS(cfg)\n",
-    "        if cfg.R != Boolean: cfg = cfg.map_values(lambda x: Boolean(x>0), Boolean)\n",
-    "        self.model = Earley(cfg.prefix_grammar.renumber().nullaryremove().unarycycleremove().renumber())\n",
-    "        super().__init__(eos = self.model.eos, V = self.model.V)\n",
-    "\n",
-    "    def p_next(self, context):\n",
-    "        p = self.model.p_next(context).trim()\n",
-    "        return Float.chart({w: 1 for w in p})\n",
-    "\n",
-    "    def __call__(self, context):\n",
-    "        return float(self.model(context) != Boolean.zero)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -428,6 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
+   "id": "188e7c13",
    "metadata": {},
    "outputs": [
     {
@@ -522,14 +506,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c481f429-b311-45b3-bd15-3b6349305e64",
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def main():\n",
-    "    constraint_model = PureModel(prompt, 50)\n",
-    "    particles = await smc_standard(constraint_model, 10)\n",
+    "async def main(max_tokens=50, particles=10):\n",
+    "    constraint_model = PureModel(prompt, max_tokens=max_tokens)\n",
+    "    particles = await smc_standard(constraint_model, particles)\n",
     "    return particles"
    ]
   },
@@ -543,10 +527,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bb0a7f6e-b9f9-4ac1-a240-ecf416ba8b97",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'time' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m before \u001b[38;5;241m=\u001b[39m \u001b[43mtime\u001b[49m()\n\u001b[1;32m      2\u001b[0m particles \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m main()\n\u001b[1;32m      3\u001b[0m took \u001b[38;5;241m=\u001b[39m time() \u001b[38;5;241m-\u001b[39m before\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'time' is not defined"
+     ]
+    }
+   ],
    "source": [
     "before = time()\n",
     "particles = await main()\n",
@@ -642,7 +638,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
