--- a/notes/hfppl_benleb.ipynb
+++ b/notes/hfppl_benleb.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3dce4cbf-90c7-4b38-9e9d-048eed7edd50",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,8 +30,8 @@
     "import sys\n",
     "import os\n",
     "# COMMENT THESE OUT IF YOU ARE NOT ME\n",
-    "sys.path.append(\"/home/mila/b/benjamin.lebrun/genparse\")\n",
-    "os.environ[\"HF_HOME\"] = os.path.join(os.environ[\"SCRATCH\"], \"hf_cache\")"
+    "#sys.path.append(\"/home/mila/b/benjamin.lebrun/genparse\")\n",
+    "#os.environ[\"HF_HOME\"] = os.path.join(os.environ[\"SCRATCH\"], \"hf_cache\")"
    ]
   },
   {
@@ -30,16 +39,7 @@
    "execution_count": 4,
    "id": "8defee07",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/mila/b/benjamin.lebrun/miniconda3/envs/genparse/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from hfppl import Model, CachedCausalLM, LMContext, smc_standard, smc_steer\n",
     "from hfppl.distributions import TokenCategorical\n",
@@ -56,8 +56,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The `load_in_4bit` and `load_in_8bit` arguments are deprecated and will be removed in the future versions. Please, pass a `BitsAndBytesConfig` object in `quantization_config` argument instead.\n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:20<00:00, 10.47s/it]\n"
+      "/home/timv/.local/lib/python3.10/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n",
+      "The `load_in_4bit` and `load_in_8bit` arguments are deprecated and will be removed in the future versions. Please, pass a `BitsAndBytesConfig` object in `quantization_config` argument instead.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "74e3be6ed8f445359056b52b9d19d769",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/timv/.local/lib/python3.10/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -77,13 +100,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "3bbb38ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "import genparse\n",
-    "from genparse.cfglm import BoolMaskCFGLM\n",
+    "from genparse.cfglm import BoolMaskCFGLM, EarleyBoolMaskCFGLM\n",
     "from genparse.util import LarkStuff\n",
     "from genparse import EOS, Float\n",
     "from arsenal.maths import sample_dict, logsumexp\n",
@@ -94,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "7653e826-bec0-44c6-a780-57c85daffec4",
    "metadata": {},
    "outputs": [],
@@ -117,7 +140,7 @@
     "# A: SELECT vote, zipcode, age FROM data ORDER BY age ASC </s>\n",
     "# Q: Write a SQL query that returns white voters' average age for each state color.\n",
     "\n",
-    "guide = BoolMaskCFGLM(\n",
+    "guide = EarleyBoolMaskCFGLM(\n",
     "    LarkStuff(\n",
     "        r\"\"\"\n",
     "            start: WS? \"SELECT\" WS select_expr WS \"FROM\" WS from_expr [WS \"WHERE\" WS bool_condition] [WS \"GROUP BY\" WS var_list] [WS \"ORDER BY\" WS orderby_expr] WS EOS\n",
@@ -770,7 +793,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
