hfppl notebook for tim o

--- a/notes/hfppl_for_tim_o.ipynb
+++ b/notes/hfppl_for_tim_o.ipynb
@@ -25,8 +25,8 @@
     "import os\n",
     "import getpass\n",
     "\n",
-    "if getpass.getuser() == \"benjamin.lebrun\":\n",
-    "    # @TIMO you may need to set this to your local genparse\n",
+    "if getpass.getuser() == \"benjamin.lebrun\": # change to your user if you want to set these\n",
+    "    # @TIMO you may need to set this to your local genparse repo \n",
     "    sys.path.append(\"/home/mila/b/benjamin.lebrun/genparse\")\n",
     "    # @TIMO also set your cache IF you run into disk quota issues\n",
     "    os.environ[\"HF_HOME\"] = os.path.join(os.environ[\"SCRATCH\"], \"hf_cache\")\n",
@@ -314,7 +314,121 @@
       "`,` :  SELECT  vote, : -11.189643803215231\n",
       "`nic` : SELECT race_ethnic : -15.86374228349387\n",
       "`,` :  SELECT  vote, : -11.189643803215231\n",
-      "`,` :  SELECT  vote, : -11.189643803215231\n"
+      "`,` :  SELECT  vote, : -11.189643803215231\n",
+      "`  ` :  SELECT  vote,   : -14.085285589535994\n",
+      "` ` :  SELECT  vote,  : -16.167316836742877\n",
+      "` ` :  SELECT  vote,  : -16.167316836742877\n",
+      "`  ` :  SELECT  vote,   : -14.085285589535994\n",
+      "` ` :  SELECT  vote,  : -16.167316836742877\n",
+      "`ity` : SELECT race_ethnicity : -15.864716291915714\n",
+      "`  ` :  SELECT  vote,   : -14.085285589535994\n",
+      "`ity` : SELECT race_ethnicity : -15.864716291915714\n",
+      "` ` :  SELECT  vote,  : -16.167316836742877\n",
+      "` ` :  SELECT  vote,  : -16.167316836742877\n",
+      "`age` :  SELECT  vote,  age : -20.03618795610198\n",
+      "`age` :  SELECT  vote, age : -21.7555542458848\n",
+      "`age` :  SELECT  vote, age : -21.7555542458848\n",
+      "`age` :  SELECT  vote,  age : -20.03618795610198\n",
+      "`age` :  SELECT  vote, age : -21.7555542458848\n",
+      "`,` : SELECT race_ethnicity, : -16.14146020570957\n",
+      "`age` :  SELECT  vote,  age : -20.03618795610198\n",
+      "`,` : SELECT race_ethnicity, : -16.14146020570957\n",
+      "`age` :  SELECT  vote, age : -21.7555542458848\n",
+      "`age` :  SELECT  vote, age : -21.7555542458848\n",
+      "` ` : SELECT race_ethnicity,  : -25.207274990644382\n",
+      "`   ` : SELECT race_ethnicity,    : -22.539306356363376\n",
+      "` ` : SELECT race_ethnicity,  : -25.207274990644382\n",
+      "` ` : SELECT race_ethnicity,  : -25.207274990644382\n",
+      "` ` : SELECT race_ethnicity,  : -25.207274990644382\n",
+      "`,` :  SELECT  vote,  age, : -18.24987500118818\n",
+      "`  ` :  SELECT  vote,  age   : -18.21626231545276\n",
+      "` ` : SELECT race_ethnicity,  : -25.207274990644382\n",
+      "` ` : SELECT race_ethnicity,  : -25.207274990644382\n",
+      "` ` : SELECT race_ethnicity,  : -25.207274990644382\n",
+      "` ` :  SELECT  vote,  age,  : -23.305978801417538\n",
+      "`FROM` :  SELECT  vote,  age  FROM : -23.268373778387943\n",
+      "`FROM` :  SELECT  vote,  age  FROM : -23.268373778387943\n",
+      "` ` :  SELECT  vote,  age,  : -23.305978801417538\n",
+      "`FROM` :  SELECT  vote,  age  FROM : -23.268373778387943\n",
+      "` ` :  SELECT  vote,  age,  : -23.305978801417538\n",
+      "`FROM` :  SELECT  vote,  age  FROM : -23.268373778387943\n",
+      "`FROM` :  SELECT  vote,  age  FROM : -23.268373778387943\n",
+      "` ` :  SELECT  vote,  age,  : -23.305978801417538\n",
+      "` ` :  SELECT  vote,  age,  : -23.305978801417538\n",
+      "`age` :  SELECT  vote,  age, age : -31.298996342022853\n",
+      "` ` :  SELECT  vote,  age  FROM  : -26.01630730051346\n",
+      "`  ` :  SELECT  vote,  age  FROM   : -23.953807286150866\n",
+      "`vot` :  SELECT  vote,  age, vot : -25.034153888480606\n",
+      "` ` :  SELECT  vote,  age  FROM  : -26.01630730051346\n",
+      "`gender` :  SELECT  vote,  age, gender : -27.67365309310691\n",
+      "`   ` :  SELECT  vote,  age  FROM    : -22.719432255514175\n",
+      "` ` :  SELECT  vote,  age  FROM  : -26.01630730051346\n",
+      "`age` :  SELECT  vote,  age, age : -31.298996342022853\n",
+      "`age` :  SELECT  vote,  age, age : -31.298996342022853\n",
+      "`data` :  SELECT  vote,  age  FROM   data : -29.095289022655933\n",
+      "`data` :  SELECT  vote,  age  FROM  data : -29.20604106424312\n",
+      "`data` :  SELECT  vote,  age  FROM data : -29.33134922589802\n",
+      "`data` :  SELECT  vote,  age  FROM   data : -29.095289022655933\n",
+      "`data` :  SELECT  vote,  age  FROM   data : -29.095289022655933\n",
+      "`data` :  SELECT  vote,  age  FROM   data : -29.095289022655933\n",
+      "`data` :  SELECT  vote,  age  FROM   data : -29.095289022655933\n",
+      "`data` :  SELECT  vote,  age  FROM   data : -29.095289022655933\n",
+      "`data` :  SELECT  vote,  age  FROM   data : -29.095289022655933\n",
+      "`data` :  SELECT  vote,  age  FROM   data : -29.095289022655933\n",
+      "`  ` :  SELECT  vote,  age  FROM   data   : -29.823793646061336\n",
+      "` ` :  SELECT  vote,  age  FROM  data  : -32.10335329475348\n",
+      "` ` :  SELECT  vote,  age  FROM data  : -31.97818450769303\n",
+      "` ` :  SELECT  vote,  age  FROM   data  : -31.667543513343468\n",
+      "` ` :  SELECT  vote,  age  FROM   data  : -31.667543513343468\n",
+      "`  ` :  SELECT  vote,  age  FROM   data   : -29.823793646061336\n",
+      "` ` :  SELECT  vote,  age  FROM   data  : -31.667543513343468\n",
+      "` ` :  SELECT  vote,  age  FROM   data  : -31.667543513343468\n",
+      "` ` :  SELECT  vote,  age  FROM   data  : -31.667543513343468\n",
+      "` ` :  SELECT  vote,  age  FROM   data  : -31.667543513343468\n",
+      "`GROUP` :  SELECT  vote,  age  FROM   data  GROUP : -32.73611125599316\n",
+      "`WHERE` :  SELECT  vote,  age  FROM   data WHERE : -33.4389441447181\n",
+      "`GROUP` :  SELECT  vote,  age  FROM   data  GROUP : -32.73611125599316\n",
+      "`WHERE` :  SELECT  vote,  age  FROM   data  WHERE : -33.095117216565434\n",
+      "`WHERE` :  SELECT  vote,  age  FROM   data  WHERE : -33.095117216565434\n",
+      "`GROUP` :  SELECT  vote,  age  FROM   data  GROUP : -32.73611125599316\n",
+      "`GROUP` :  SELECT  vote,  age  FROM   data GROUP : -33.07596259108556\n",
+      "`WHERE` :  SELECT  vote,  age  FROM   data  WHERE : -33.095117216565434\n",
+      "`WHERE` :  SELECT  vote,  age  FROM   data  WHERE : -33.095117216565434\n",
+      "`WHERE` :  SELECT  vote,  age  FROM   data WHERE : -33.4389441447181\n",
+      "` ` :  SELECT  vote,  age  FROM   data  GROUP  : -32.745421447944665\n",
+      "` ` :  SELECT  vote,  age  FROM   data WHERE  : -36.36437018196254\n",
+      "` ` :  SELECT  vote,  age  FROM   data  GROUP  : -32.745421447944665\n",
+      "` ` :  SELECT  vote,  age  FROM   data  WHERE  : -36.501384888876565\n",
+      "` ` :  SELECT  vote,  age  FROM   data  WHERE  : -36.501384888876565\n",
+      "` ` :  SELECT  vote,  age  FROM   data  GROUP  : -32.745421447944665\n",
+      "` ` :  SELECT  vote,  age  FROM   data GROUP  : -33.105661107692406\n",
+      "` ` :  SELECT  vote,  age  FROM   data  WHERE  : -36.501384888876565\n",
+      "` ` :  SELECT  vote,  age  FROM   data  WHERE  : -36.501384888876565\n",
+      "` ` :  SELECT  vote,  age  FROM   data WHERE  : -36.36437018196254\n",
+      "`BY` :  SELECT  vote,  age  FROM   data GROUP BY : -35.04851060483058\n",
+      "`BY` :  SELECT  vote,  age  FROM   data  GROUP BY : -34.98359825650592\n",
+      "`BY` :  SELECT  vote,  age  FROM   data  GROUP BY : -34.98359825650592\n",
+      "`BY` :  SELECT  vote,  age  FROM   data  GROUP BY : -34.98359825650592\n",
+      "`BY` :  SELECT  vote,  age  FROM   data  GROUP BY : -34.98359825650592\n",
+      "`BY` :  SELECT  vote,  age  FROM   data GROUP BY : -35.04851060483058\n",
+      "`BY` :  SELECT  vote,  age  FROM   data  GROUP BY : -34.98359825650592\n",
+      "`BY` :  SELECT  vote,  age  FROM   data  GROUP BY : -34.98359825650592\n",
+      "`BY` :  SELECT  vote,  age  FROM   data  GROUP BY : -34.98359825650592\n",
+      "`BY` :  SELECT  vote,  age  FROM   data  GROUP BY : -34.98359825650592\n",
+      "` ` :  SELECT  vote,  age  FROM   data GROUP BY  : -38.25729235582401\n",
+      "` ` :  SELECT  vote,  age  FROM   data  GROUP BY  : -38.40731786541553\n",
+      "` ` :  SELECT  vote,  age  FROM   data  GROUP BY  : -38.40731786541553\n",
+      "` ` :  SELECT  vote,  age  FROM   data  GROUP BY  : -38.40731786541553\n",
+      "` ` :  SELECT  vote,  age  FROM   data  GROUP BY  : -38.40731786541553\n",
+      "` ` :  SELECT  vote,  age  FROM   data GROUP BY  : -38.25729235582401\n",
+      "` ` :  SELECT  vote,  age  FROM   data  GROUP BY  : -38.40731786541553\n",
+      "` ` :  SELECT  vote,  age  FROM   data  GROUP BY  : -38.40731786541553\n",
+      "` ` :  SELECT  vote,  age  FROM   data  GROUP BY  : -38.40731786541553\n",
+      "` ` :  SELECT  vote,  age  FROM   data  GROUP BY  : -38.40731786541553\n",
+      "`vot` :  SELECT  vote,  age  FROM   data GROUP BY vot : -39.42323053693017\n",
+      "`state` :  SELECT  vote,  age  FROM   data  GROUP BY state : -40.89095512229236\n",
+      "`vot` :  SELECT  vote,  age  FROM   data  GROUP BY vot : -39.70174029809136\n",
+      "`vot` :  SELECT  vote,  age  FROM   data  GROUP BY vot : -39.70174029809136\n"
      ]
     }
    ],
